--- a/.github/workflows/mongodb_mmap.yml
+++ b/.github/workflows/mongodb_mmap.yml
@@ -13,17 +13,18 @@ on:
     paths-ignore:
       - 'docs/**'
   workflow_dispatch:
-
+    inputs:
+      debug:
+        type: boolean
+        description: "Run the build with tmate debugging enabled"
+        required: false
+        default: false
+  schedule:
+    - cron:  '0 0 * * *'
 jobs:
   mongodb_mmap:
     runs-on: ubuntu-20.04
     steps:
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '2.7'
-          architecture: 'x64'
-
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -31,57 +32,10 @@ jobs:
 
       - name: Build
         uses: ./.github/actions/build
-
-      - name: Run Redis
+        
+      - name: Test
         run: |
-          sudo docker run -d --name redis -v redis-data:/data  \
-          -p 6379:6379  redis redis-server --appendonly yes
-
-      - name: Juicefs Format
-        run: |
-          sudo ./juicefs format --trash-days 0 redis://127.0.0.1:6379/1 pics
-
-      - name: Juicefs Mount
-        run: |
-          sudo ./juicefs mount -d redis://127.0.0.1:6379/1 /jfs/ --enable-xattr --cache-size 3072 --no-usage-report &
-
-
-
-      - name: Set up Mongodb
-        run: |
-          df -lh
-          cd /jfs/
-          git clone https://github.com/sanwan/actionsoftware.git
-          cd actionsoftware
-          tar zxvf mongodb-linux-x86_64-3.0.0.tgz
-          cd mongodb-linux-x86_64-3.0.0
-          mkdir /jfs/mongodb/
-          nohup ./bin/mongod --dbpath /jfs/mongodb &
-
-
-
-      - name: Insert Data
-        run: |
-          df -lh
-          cd /jfs/
-          wget -O ycsb.tar.gz -q https://github.com/brianfrankcooper/YCSB/releases/download/0.5.0/ycsb-0.5.0.tar.gz
-          tar -zxvf ycsb.tar.gz
-          cd ycsb-0.5.0
-          sed -i "s?recordcount=1000?recordcount=1000000?" workloads/workloadf
-          sed -i "s?operationcount=1000?operationcount=15000?" workloads/workloadf
-          cat workloads/workloadf
-          time ./bin/ycsb load mongodb -s -P workloads/workloadf  -threads 10 > outputLoad.txt
-          df -lh
-
-
-      - name: Read Modify and Write
-        run: |
-          df -lh
-          cd /jfs/ycsb-0.5.0/
-          ps -aux | grep mongo
-          echo "run read modify write"
-          time ./bin/ycsb run mongodb -s -P workloads/workloadf -threads 10 > outputRun.txt
-          df -lh
+          sudo .github/scripts/misc/mongodb.sh
 
       - name: Log
         if: ${{ always() }}
@@ -97,3 +51,7 @@ jobs:
           channel-id: "${{ secrets.SLACK_CHANNEL_ID_FOR_PR_CHECK_NOTIFY }}"
           slack_bot_token: "${{ secrets.SLACK_BOT_TOKEN }}"  
 
+      - name: Setup upterm session
+        if: ${{ failure() && github.event_name == 'workflow_dispatch' && github.event.inputs.debug == 'true' }}
+        timeout-minutes: 60
+        uses: lhotari/action-upterm@v1
