--- a/.github/workflows/mongodb_mmap.yml
+++ b/.github/workflows/mongodb_mmap.yml
@@ -30,6 +30,12 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '2.7'
+          architecture: 'x64'
+          
       - name: Build
         uses: ./.github/actions/build
         
